fix: eliminating notes
